@@ -19,10 +19,15 @@
 //First column (logo)
 echo '<table width="100%" cellpadding="0" cellspacing="0" style="margin:0px; padding:0px;" border="0"><tr><td>';
 
-// Yes, put here your corporate logo instead pandora_logo_head.png
-// The style specifies width and height so that oversized images get resized.
-// Optimally your logo would be this size.
+/* CUSTOM BRANDING STARTS HERE */
+/* TODO: Put the branding in it's own file, variables or database 
+ Yes, put here your corporate logo instead pandora_logo_head.png
+ The style specifies width and height so that oversized images get resized.
+ Optimally your logo would be this size.
+*/
 echo '<a href="index.php"><img src="images/pandora_logo_head.png" alt="logo" style="border-width:0px; width:140px; height:60px;" /></a>';
+/* CUSTOM BRANDING ENDS HERE */
+
 
 // Margin to logo
 echo '</td><td width="20">&nbsp;</td>';
